// 生成client, service 和user.srpc.h
// protoc --cpp_out=./ user.proto
// srpc_generator protobuf user.proto ./
syntax="proto3";

// 定义一个请求消息
message ReqSignup
{
    // required 必须出现(默认)
    // optional 可选
    // repeated 可重复出现, 表示数组
    // 类型 字段名 编号
    string username = 1;
    string password = 2;   
    // string address = 3;
}

// 定义一个响应消息
message RespSignup
{
    int32 code = 1;
    string msg = 2;
}

// 服务
service UserService
{
    rpc Signup(ReqSignup) returns (RespSignup) {}
}

// 补充: 字段名不重要, 不影响编码